--- a/squid_dev.conf
+++ b/squid_dev.conf
@@ -6,17 +6,16 @@ acl localhost src 127.0.0.1/32
 
 # rule allowing access from your local networks.
 # Adapt to list your (internal) IP networks from where browsing # should be allowed
-acl localnet src 10.0.0.0/8     # RFC1918 possible internal network
-acl localnet src 172.0.0.0/24  # RFC1918 possible internal network
+acl localnet src 10.0.0.0/255.0.0.0     # RFC1918 possible internal network
+acl localnet src 172.0.0.0/255.0.0.0  # RFC1918 possible internal network
 acl localnet src 192.168.0.0/16 # RFC1918 possible internal network
+acl localnet src 193.0.0.0/255.0.0.0
 acl localnet src 89.197.20.180
-
 
 #acl SSL_ports port 443
 acl Safe_ports port 80          # http
-#acl Safe_ports port 443         # https
+acl Safe_ports port 443         # https
 acl Safe_ports port 1025-65535  # unregistered ports acl CONNECT method CONNECT
-
 acl Safe_method method GET HEAD POST
 acl all src all
 
@@ -27,10 +26,16 @@ hosts_file /etc/hosts
 
 http_access allow localhost
 http_access allow localnet
-http_access allow all
+http_access deny all
 
-#http_port 8080 transparent
-http_port 172.17.0.13:8080 intercept
+#http_port 3128  
+http_port 8080 transparent
+
+
+acl snmppublic snmp_community public
+snmp_port 3401
+snmp_access allow snmppublic all
+
 
 #Add in the X-FORWARDED_FOR http header
 forwarded_for on
@@ -83,6 +88,8 @@ maximum_object_size 4 MB
 #refresh_pattern GetInPlaySports 0 100% 1 ignore-reload ignore-no-cache ignore-private
 #refresh_pattern NewXmlWebService 0 100% 1 ignore-reload ignore-no-cache ignore-private
 #refresh_pattern -i \.(gif|png|jpg|jpeg|ico|css|js|xml)$ 0 100% 1 ignore-reload override-expire ignore-no-cache ignore-private
+#acl local-servers dstdomain wwwsuperbahis-tu.stage.webglb.com
+#always_direct allow local-servers
 
 refresh_pattern . 0 0% 0 ignore-reload ignore-no-cache
 
