--- a/squid_dev.conf
+++ b/squid_dev.conf
@@ -1,111 +1,58 @@
-cache_effective_user squid
-cache_effective_group squid
-
-acl manager proto cache_object
-acl localhost src 127.0.0.1/32
-
-# rule allowing access from your local networks.
-# Adapt to list your (internal) IP networks from where browsing # should be allowed
 acl localnet src 10.0.0.0/255.0.0.0     # RFC1918 possible internal network
-acl localnet src 172.0.0.0/255.0.0.0  # RFC1918 possible internal network
+acl localnet src 172.16.0.0/12  # RFC1918 possible internal network
 acl localnet src 192.168.0.0/16 # RFC1918 possible internal network
-acl localnet src 193.0.0.0/255.0.0.0
+acl localnet src fc00::/7       # RFC 4193 local private network range
+acl localnet src fe80::/10      # RFC 4291 link-local (directly plugged) machines
 acl localnet src 89.197.20.180
-
-#acl SSL_ports port 443
+acl SSL_ports port 443
 acl Safe_ports port 80          # http
+acl Safe_ports port 21          # ftp
 acl Safe_ports port 443         # https
-acl Safe_ports port 1025-65535  # unregistered ports acl CONNECT method CONNECT
+acl Safe_ports port 70          # gopher
+acl Safe_ports port 210         # wais
+acl Safe_ports port 1025-65535  # unregistered ports
+acl Safe_ports port 280         # http-mgmt
+acl Safe_ports port 488         # gss-http
+acl Safe_ports port 591         # filemaker
+acl Safe_ports port 777         # multiling http
+acl CONNECT method CONNECT
+acl SB_IP dst 89.197.20.180
+acl SB_IP1 dst 172.0.0.0/255.0.0.0
+acl SB_IP2 dst 10.0.0.0/255.0.0.0
+
 acl Safe_method method GET HEAD POST
-acl all src all
 
+http_access allow Safe_method SB_IP
+http_access allow Safe_method SB_IP1
+http_access allow Safe_method SB_IP2
 
-#-------------------------------------------------------------
+always_direct allow all
 hosts_file /etc/hosts
-#-------------------------------------------------------------
-
-http_access allow localhost
-http_access allow localnet
-http_access deny all
-
-#http_port 3128  
-http_port 8080 transparent
-
-
-acl snmppublic snmp_community public
-snmp_port 3401
-snmp_access allow snmppublic all
-
-
-#Add in the X-FORWARDED_FOR http header
 forwarded_for on
-
-## Commented timeout values below, are defaults! ##
-forward_timeout 2 seconds
-negative_ttl 10 seconds
-
-access_log /var/log/squid/access.log squid
-strip_query_terms off
-
-
-#-------
-
-# The collapsed forwarding causes multiple request for an object, to be collapsed into just one request.
-# The idea is this should stop the "stampede" when an object expires.
 collapsed_forwarding on
 
-#-------
-#acl QUERY urlpath_regex cgi-bin \?
-#no_cache deny QUERY
+http_access deny !Safe_ports
+http_access deny CONNECT !SSL_ports
+http_access allow localhost manager
+http_access deny manager
 
+http_access allow localnet
+http_access allow localhost
+http_access allow all
+
+http_port 3128 accel
+
+coredump_dir /var/spool/squid
+refresh_pattern .               0       20%     4320
 cache_mem 1536 MB
 cache_swap_low 95
 cache_swap_high 99
+strip_query_terms off
 
 max_filedesc    10000
-#-------
-
-#Store log is disabled to prevent extra logging
-#feel free to re-enable for debugging.
 cache_store_log none
-
-# Uncomment and adjust the following to add a disk cache directory.
 cache_dir ufs /var/spool/squid 4096 16 256
 cache_swap_log /var/spool/squid/cache-swap_log
 maximum_object_size 4 MB
-
-# Leave coredumps in the first cache dir
-#coredump_dir /var/spool/squid
-
-#####################################################
-# The refresh pattern will only match a path or URI
-# and also any querys will break the match below.
-# you cant match on query stuff either, and no, * does not work!
-#####################################################
-
-#refresh_pattern -i \? 0 100% 1 ignore-reload ignore-no-cache ignore-private
-#refresh_pattern GetCoupon 0 100% 1 ignore-reload ignore-no-cache ignore-private
-#refresh_pattern GetInPlaySports 0 100% 1 ignore-reload ignore-no-cache ignore-private
-#refresh_pattern NewXmlWebService 0 100% 1 ignore-reload ignore-no-cache ignore-private
-#refresh_pattern -i \.(gif|png|jpg|jpeg|ico|css|js|xml)$ 0 100% 1 ignore-reload override-expire ignore-no-cache ignore-private
-#acl local-servers dstdomain wwwsuperbahis-tu.stage.webglb.com
-#always_direct allow local-servers
-
-refresh_pattern . 0 0% 0 ignore-reload ignore-no-cache
-
-#       options: override-expire
-#                override-lastmod
-#                reload-into-ims
-#                ignore-reload
-#                ignore-no-cache
-#                ignore-no-store
-#                DOES NOT WORK - ignore-must-revalidate
-#                ignore-private
-#                ignore-auth
-#                max-stale=NN
-#                refresh-ims
-#                store-stale
-
-#debug_options ALL,1
-debug_options ALL,3
+#debug_options ALL,6
 
