--- a/squid_1_prod.conf
+++ b/squid_1_prod.conf
@@ -50,19 +50,14 @@ http_port 3128 accel
 #snmp_port 3401
 #snmp_access allow snmppublic all
 
-
 icp_port 3130
-icp_access allow localnet
-cache_peer 10.214.1.129 sibling 8080 3130 no-digest no-netdb-exchange round-robin
-cache_peer 10.214.1.130 sibling 8080 3130 no-digest no-netdb-exchange round-robin
-
-
+cache_peer 172.17.0.1 sibling 3128 3130 no-digest no-netdb-exchange round-robin
 prefer_direct off
 icp_access allow all
 icp_query_timeout 500
 
 
-#http_port 3128 transparent
+#http_port 8080 transparent
 
 coredump_dir /var/spool/squid
 #refresh_pattern .               0       20%     4320
@@ -71,17 +66,15 @@ cache_mem 1536 MB
 cache_swap_low 95
 cache_swap_high 99
 strip_query_terms off
-logfile_rotate 0
-cache_log /var/log/squid/cache.log
+#logformat squid %{%Y/%m/%d:%H:%M:%S}tl %6tr %&gt;a %Ss/%03Hs %&lt;st %rm %ru %un %Sh/%&lt;A %mt
 access_log /var/log/squid/access.log 
-logfile_rotate 1
+#logfile_rotate = 1
 
 max_filedesc    10000
 cache_store_log none
 cache_dir ufs /var/spool/squid 4096 16 256
 cache_swap_log /var/spool/squid/cache-swap_log
 maximum_object_size 4 MB
-debug_options ALL,1 11,3 31,3 65,3
-
+debug_options ALL,1 12,5 42,3
 
 
