--- a/squid_prod.test.conf
+++ b/squid_prod.test.conf
@@ -30,7 +30,7 @@ acl Safe_method method GET HEAD POST
 http_access allow Safe_method SB_IP
 http_access allow Safe_method SB_IP1
 http_access allow Safe_method SB_IP2
-always_direct allow all
+#always_direct allow all
 hosts_file /etc/hosts
 forwarded_for on
 collapsed_forwarding on
@@ -43,38 +43,54 @@ http_access deny manager
 http_access allow localnet
 http_access allow localhost
 http_access allow all
+acl snmppublic snmp_community public
+snmp_port 3401
+snmp_access allow snmppublic all
+#http_port 8080 vhost 
+http_port 3128 transparent
+#http_port 8080 vhost
 
-http_port 3128 accel
-
-#acl snmppublic snmp_community public
-#snmp_port 3401
-#snmp_access allow snmppublic all
+http_port 8080 accel
 
 icp_port 3130
-cache_peer 172.17.0.1 sibling 3128 3130 no-digest no-netdb-exchange round-robin
+icp_access allow localnet
+#cache_peer 10.214.1.129 sibling 3128 3130 no-digest no-netdb-exchange round-robin
+cache_peer localhost sibling 8080 3130 no-digest no-netdb-exchange round-robin
+#cache_peer  sibling 8080 3130 no-digest no-netdb-exchange round-robin
+
+
+
 #prefer_direct off
 icp_access allow all
 icp_query_timeout 500
 
-
-#http_port 8080 transparent
-
 coredump_dir /var/spool/squid
-#refresh_pattern .               0       20%     4320
 refresh_pattern . 0 100% 1 ignore-reload ignore-no-cache
 cache_mem 1536 MB
 cache_swap_low 95
 cache_swap_high 99
 strip_query_terms off
-#logformat squid %{%Y/%m/%d:%H:%M:%S}tl %6tr %&gt;a %Ss/%03Hs %&lt;st %rm %ru %un %Sh/%&lt;A %mt
-access_log /var/log/squid/access.log 
-#logfile_rotate = 1
+log_icp_queries on
 
+## logs
+logformat combined [%tl] %>A %{Host}>h "%rm %ru HTTP/%rv" %Hs %<st "%{Referer}>h" "%{User-Agent}>h" %Ss:%Sh
+access_log /var/log/squid/access.log combined
+cache_store_log /var/log/squid/store.log
+cache_log  /var/log/squid/cache.log
+logfile_rotate 8
+
+#logfile_rotate 0
+#cache_log /var/log/squid/cache.log
+#logformat headers %ps
+
+#access_log /var/log/squid/access.log squid
+cache_mgr devops@managedglobalservices.com
 max_filedesc    10000
-cache_store_log none
+#cache_store_log none
 cache_dir ufs /var/spool/squid 4096 16 256
 cache_swap_log /var/spool/squid/cache-swap_log
 maximum_object_size 4 MB
-debug_options ALL,1 12,5 42,3
+debug_options ALL,1 11,3 31,3 65,3
+
 
 
