--- a/squid_prod_2.conf
+++ b/squid_prod_2.conf
@@ -2,13 +2,10 @@ cache_effective_user squid
 cache_effective_group squid
 acl manager proto cache_object
 
-acl localnet src 10.0.0.0/255.0.0.0     # RFC1918 possible internal network
-acl localhost src 127.0.0.1/32
+acl localnet src 10.0.0.0/8     # RFC1918 possible internal network
 acl localnet src 172.16.0.0/12  # RFC1918 possible internal network
 acl localnet src 192.168.0.0/16 # RFC1918 possible internal network
-acl localnet src fc00::/7       # RFC 4193 local private network range
-acl localnet src fe80::/10      # RFC 4291 link-local (directly plugged) machines
-acl localnet src 89.197.20.180
+acl localhost src 127.0.0.1/32
 acl SSL_ports port 443
 acl Safe_ports port 80          # http
 acl Safe_ports port 21          # ftp
@@ -21,17 +18,29 @@ acl Safe_ports port 488         # gss-http
 acl Safe_ports port 591         # filemaker
 acl Safe_ports port 777         # multiling http
 acl CONNECT method CONNECT
-acl SB_IP dst 89.197.20.180
-acl SB_IP1 dst 172.0.0.0/255.0.0.0
-acl SB_IP2 dst 10.0.0.0/255.0.0.0
+acl Safe_method method GET HEAD POST CONNECT OPTIONS
 
-acl Safe_method method GET HEAD POST
 
-http_access allow Safe_method SB_IP
-http_access allow Safe_method SB_IP1
-http_access allow Safe_method SB_IP2
-always_direct allow all
+icp_port 3130
+icp_access allow localnet
+
+cache_peer 10.214.1.129 parent  3128 3130 no-digest no-netdb-exchange round-robin
+cache_peer 10.214.1.130 sibling  3128 3130 no-digest no-netdb-exchange round-robin
+
+#cache_peer 10.214.1.129 sibling 3128 3130 no-digest no-netdb-exchange round-robin
+#cache_peer 10.214.1.129 parent  3128 3130 no-digest no-netdb-exchange round-robin
+#cache_peer 10.214.1.130 sibling  3129 3130 no-digest no-netdb-exchange round-robin
+
+
+always_direct allow localnet
+#never_direct allow all
+prefer_direct off
+nonhierarchical_direct off
+
+
+
 hosts_file /etc/hosts
+
 forwarded_for on
 collapsed_forwarding on
 
@@ -39,42 +48,38 @@ http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 http_access allow localhost manager
 http_access deny manager
-
 http_access allow localnet
 http_access allow localhost
-http_access allow all
 
-http_port 3128 accel
 
-#acl snmppublic snmp_community public
-#snmp_port 3401
-#snmp_access allow snmppublic all
+http_port 3128 accel 
 
-icp_port 3130
-cache_peer 172.17.0.1 sibling 3128 3130 no-digest no-netdb-exchange round-robin
-#prefer_direct off
-icp_access allow all
+
+peer_connect_timeout 1 seconds
 icp_query_timeout 500
-
-
-#http_port 8080 transparent
-
+forward_timeout 2 seconds
+header_access Set-Cookie deny all
 coredump_dir /var/spool/squid
-#refresh_pattern .               0       20%     4320
 refresh_pattern . 0 100% 1 ignore-reload ignore-no-cache
 cache_mem 1536 MB
 cache_swap_low 95
 cache_swap_high 99
 strip_query_terms off
-#logformat squid %{%Y/%m/%d:%H:%M:%S}tl %6tr %&gt;a %Ss/%03Hs %&lt;st %rm %ru %un %Sh/%&lt;A %mt
-access_log /var/log/squid/access.log 
-#logfile_rotate = 1
+logfile_rotate 0
+cache_log /var/log/squid/cache.log
+logformat squid      %ts.%03tu %6tr %{Realip}>h %Ss/%03>Hs %<st %rm %ru %[un %Sh/%<a %mt
+#logformat squid	%>A %>p  %<p %<A %{Referer}>h %{X-SBORIGIN}>h %{Realip}>h
+access_log /var/log/squid/access.log squid
 
 max_filedesc    10000
 cache_store_log none
 cache_dir ufs /var/spool/squid 4096 16 256
 cache_swap_log /var/spool/squid/cache-swap_log
 maximum_object_size 4 MB
-debug_options ALL,1 12,5 42,3
+#debug_options ALL,1 11,3 31,3 65,3
+##debug_options ALL,1 12,5 37,5 65,5 44,5
+
+debug_options ALL,1 12,9 37,9 65,9 44,9 72,9 78,9
+
 
 
