--- a/squid_prod.conf
+++ b/squid_prod.conf
@@ -1,14 +1,16 @@
-cache_effective_user squid
-cache_effective_group squid
-acl manager proto cache_object
+#
+# Recommended minimum configuration:
+#
 
-acl localnet src 10.0.0.0/255.0.0.0     # RFC1918 possible internal network
-acl localhost src 127.0.0.1/32
+# Example rule allowing access from your local networks.
+# Adapt to list your (internal) IP networks from where browsing
+# should be allowed
+acl localnet src 10.0.0.0/8     # RFC1918 possible internal network
 acl localnet src 172.16.0.0/12  # RFC1918 possible internal network
 acl localnet src 192.168.0.0/16 # RFC1918 possible internal network
 acl localnet src fc00::/7       # RFC 4193 local private network range
 acl localnet src fe80::/10      # RFC 4291 link-local (directly plugged) machines
-acl localnet src 89.197.20.180
+
 acl SSL_ports port 443
 acl Safe_ports port 80          # http
 acl Safe_ports port 21          # ftp
@@ -21,67 +23,55 @@ acl Safe_ports port 488         # gss-http
 acl Safe_ports port 591         # filemaker
 acl Safe_ports port 777         # multiling http
 acl CONNECT method CONNECT
-acl SB_IP dst 89.197.20.180
-acl SB_IP1 dst 172.0.0.0/255.0.0.0
-acl SB_IP2 dst 10.0.0.0/255.0.0.0
 
-acl Safe_method method GET HEAD POST
-
-http_access allow Safe_method SB_IP
-http_access allow Safe_method SB_IP1
-http_access allow Safe_method SB_IP2
-always_direct allow all
-hosts_file /etc/hosts
-forwarded_for on
-collapsed_forwarding on
-
+#
+# Recommended minimum Access Permission configuration:
+#
+# Deny requests to certain unsafe ports
 http_access deny !Safe_ports
+
+
+# Deny CONNECT to other than secure SSL ports
 http_access deny CONNECT !SSL_ports
+
+# Only allow cachemgr access from localhost
 http_access allow localhost manager
 http_access deny manager
 
+# We strongly recommend the following be uncommented to protect innocent
+# web applications running on the proxy server who think the only
+# one who can access services on "localhost" is a local user
+#http_access deny to_localhost
+
+#
+# INSERT YOUR OWN RULE(S) HERE TO ALLOW ACCESS FROM YOUR CLIENTS
+#
+
+# Example rule allowing access from your local networks.
+# Adapt localnet in the ACL section to list your (internal) IP networks
+# from where browsing should be allowed
 http_access allow localnet
 http_access allow localhost
-http_access allow all
 
-http_port 3128 accel
+# And finally deny all other access to this proxy
+http_access deny all
 
-#acl snmppublic snmp_community public
-#snmp_port 3401
-#snmp_access allow snmppublic all
+# Squid normally listens to port 3128
+http_port 3128 intercept
+http_port 1337
 
+# Uncomment and adjust the following to add a disk cache directory.
+#cache_dir ufs /var/spool/squid 100 16 256
 
-icp_port 3130
-icp_access allow localnet
-cache_peer 10.214.1.129 sibling 8080 3130 no-digest no-netdb-exchange round-robin
-cache_peer 10.214.1.130 sibling 8080 3130 no-digest no-netdb-exchange round-robin
-
-
-prefer_direct off
-icp_access allow all
-icp_query_timeout 500
-
-
-#http_port 3128 transparent
-
+# Leave coredumps in the first cache dir
 coredump_dir /var/spool/squid
-#refresh_pattern .               0       20%     4320
-refresh_pattern . 0 100% 1 ignore-reload ignore-no-cache
-cache_mem 1536 MB
-cache_swap_low 95
-cache_swap_high 99
-strip_query_terms off
-logfile_rotate 0
-cache_log /var/log/squid/cache.log
-access_log /var/log/squid/access.log 
-logfile_rotate 1
 
-max_filedesc    10000
-cache_store_log none
-cache_dir ufs /var/spool/squid 4096 16 256
-cache_swap_log /var/spool/squid/cache-swap_log
-maximum_object_size 4 MB
+#
+# Add any of your own refresh_pattern entries above these.
+#
+refresh_pattern ^ftp:           1440    20%     10080
+refresh_pattern ^gopher:        1440    0%      1440
+refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
+refresh_pattern .               0       20%     4320
 debug_options ALL,1 11,3 31,3 65,3
-
-
 
