--- a/squid_pool3.conf
+++ b/squid_pool3.conf
@@ -26,6 +26,8 @@ acl SB_IP5 dst  5.62.90.128/26
 acl SB_IP6 dst  5.62.90.192/26
 acl SB_IP7 dst  5.62.88.192/26
 acl SB_IP8 dst  195.178.6.0/23
+
+
 hosts_file /etc/hosts
 http_access deny CONNECT !SSL_ports
 http_access allow localhost
@@ -39,6 +41,7 @@ http_access allow Safe_method SB_IP5
 http_access allow Safe_method SB_IP6
 http_access allow Safe_method SB_IP7
 http_access allow Safe_method SB_IP8
+
 #http_access deny all
 http_access allow all
 
@@ -53,10 +56,10 @@ snmp_access allow snmppublic all
 icp_port 3130
 icp_access allow localnet
 
-cache_peer 10.214.0.133	parent   3128     3130	no-digest no-netdb-exchange round-robin
-cache_peer 10.214.0.134 parent   3128     3130  no-digest no-netdb-exchange round-robin
-cache_peer 10.214.0.135 parent   3128     3130  no-digest no-netdb-exchange round-robin
-cache_peer 10.214.0.136 parent   3128     3130  no-digest no-netdb-exchange round-robin
+cache_peer 10.214.0.133	parent   3139     3141	no-digest no-netdb-exchange round-robin
+cache_peer 10.214.0.134 parent   3139     3141  no-digest no-netdb-exchange round-robin
+cache_peer 10.214.0.135 parent   3139     3141  no-digest no-netdb-exchange round-robin
+cache_peer 10.214.0.136 parent   3139     3141  no-digest no-netdb-exchange round-robin
 
 
 http_port 3128 accel  
@@ -98,7 +101,7 @@ cache_store_log none
 # Uncomment and adjust the following to add a disk cache directory.
 cache_dir ufs /var/spool/squid 3072 16 256 
 cache_swap_log /var/spool/squid/cache-swap_log
-maximum_object_size 1 GB
+maximum_object_size 4 MB
 
 # Leave coredumps in the first cache dir 
 coredump_dir /var/spool/squid
