--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.8'
 services:
   Squid_1:
     image: pmohan/squid_2020:template_v_UTC
-#    hostname: Member1
     ports:
       - target: 3128
         published: 3128
@@ -14,26 +13,23 @@ services:
         protocol: udp
         mode: host
     configs:
-      - source: my_config_3
+      - source: squid_config_1
         target: /etc/squid/squid.conf
-      - source: hosts_CF_v2
+      - source: hosts_CF_v1
         target: /etc/hosts
       - source: resolver
         target: /etc/resolv.conf
     deploy:
       mode: replicated
-      replicas: 2
+      replicas: 4
       update_config:
         parallelism: 1
         delay: 10s
         order: stop-first
- #   volumes:
- #      - cache:/var/spool/squid
-
-  cadvisor01:
+  cadvisor03:
      image: google/cadvisor:latest
      ports:
-       - 8087:8080
+       - 8089:8080
      volumes:
        - /:/rootfs:ro
        - /var/run:/var/run:rw
@@ -42,11 +38,11 @@ services:
      deploy:
           placement:
             constraints:
-              - node.hostname == prod-vl-cache-beta01.sbetprod.ads
-  cadvisor02:
+              - node.hostname == prod-vl-dockersquid01.sbetprod.ads
+  cadvisor04:
      image: google/cadvisor:latest
      ports:
-       - 8088:8080
+       - 8090:8080
      volumes:
        - /:/rootfs:ro
        - /var/run:/var/run:rw
@@ -55,44 +51,38 @@ services:
      deploy:
           placement:
             constraints:
-              - node.hostname == prod-vl-cache-beta02.sbetprod.ads
-
-#    deploy:
-#      placement:
-#         constraints:
-#             - node.hostname == prod-vl-cache-beta01.sbetprod.ads
-
-#  Squid_2:
-#    image: pmohan/squid_2020:template_v_9_10.11
-#    hostname: Member2
-#    ports:
-#     - "3129:3128"
-#     - "3131:3131/udp"
-#
-#
-#    configs:
-#      - source: my_config_2
-#        target: /etc/squid/squid.conf
-#      - source: hosts_CF_v2
-#        target: /etc/hosts
-#      - source: resolver
-#        target: /etc/resolv.conf
-#
-#    deploy:
-#      placement:
-#         constraints:
-#             - node.hostname == prod-vl-cache-beta02.sbetprod.ads
-#
+              - node.hostname == prod-vl-dockersquid02.sbetprod.ads
+  cadvisor05:
+     image: google/cadvisor:latest
+     ports:
+       - 8091:8080
+     volumes:
+       - /:/rootfs:ro
+       - /var/run:/var/run:rw
+       - /sys:/sys:ro
+       - /var/lib/docker/:/var/lib/docker:ro
+     deploy:
+          placement:
+            constraints:
+              - node.hostname == prod-vl-dockersquid03.sbetprod.ads
+  cadvisor06:
+     image: google/cadvisor:latest
+     ports:
+       - 8092:8080
+     volumes:
+       - /:/rootfs:ro
+       - /var/run:/var/run:rw
+       - /sys:/sys:ro
+       - /var/lib/docker/:/var/lib/docker:ro
+     deploy:
+          placement:
+            constraints:
+              - node.hostname == prod-vl-dockersquid04.sbetprod.ads
 configs:
-  my_config_3:
-    file: ./squid_prod_1.conf
-  my_config:
-    file: ./squid_prod_2.conf
-  hosts_CF_v2:
+  squid_config_1:
+    file: ./squid.conf
+  hosts_CF_v1:
     file: ./hosts
   resolver:
     file: ./resolv.conf
-
-#volumes:
-# cache:
 
